--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700" rel="stylesheet">
 </head>
 <body>
   <div class="title-container">
-    <div class="title">Maze Generator</div>
-    <div class="sub-title">Wilson's Algorithm</div>
+    <div class="title"><span>M</span>aze Generator</div>
+    <div class="sub-title">Wilson's <span>A</span>lgorithm</div>
   </div>
 
   <div class="options-container">
     <div class="speed">Speed</div>
-    <input type="range" min="1" max="500" id="speedSlider" />
+    <div class="speed-subtitle">How fast to render the maze (1-100)</div>
+    <input type="range" min="1" max="100" value="10" id="speedSlider" />
     <div class="size">Size</div>
+    <div class="size-subtitle">Maze grid size (100-800)</div>
+    <input type="number" id="size" min="100" max="800" value="500" />
     <div class="color">Color</div>
   </div>
 
   <div class="maze-container">
   </div>
 
-  <div>
-    <input type="button" value="Generate" onclick="generateMaze()" />
+  <div class="generate-button">
+    <input type="button" id="generate-button" value="Generate" onclick="generateMaze()" />
   </div>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
