fills maze with color

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="size-subtitle">Maze grid size (100-800)</div>
     <input type="number" id="size" min="100" max="800" value="500" />
     <div class="color">Color</div>
+    <input id="background-color" type="color" />
   </div>
 
   <div class="maze-container">
