modified color fill to proper gradient

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <input type="range" min="1" max="100" value="10" id="speedSlider" />
     <div class="size">Size</div>
     <div class="size-subtitle">Maze grid size (100-800)</div>
-    <input type="number" id="size" min="100" max="800" value="500" />
-    <div class="color">Color</div>
-    <input id="background-color" type="color" />
+    <input type="number" id="size" min="100" max="800" value="100" />
+    <div class="color">Color Gradient</div>
+    <input id="gradient-color-one" type="color" />
+    <input id="gradient-color-two" type="color" />
   </div>
 
   <div class="maze-container">
