--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div class="options-container">
     <div class="speed">Speed</div>
     <div class="speed-subtitle">How fast to render the maze (1-100)</div>
-    <input type="range" min="1" max="100" value="10" id="speedSlider" />
+    <input type="range" min="1" max="100" value="50" id="speedSlider" />
     <div class="size">Size</div>
     <div class="size-subtitle">Maze grid size (100-800)</div>
-    <input type="number" id="size" min="100" max="800" value="100" />
+    <input type="number" id="size" min="100" max="800" value="250" />
     <div class="color">Color Gradient</div>
-    <input id="gradient-color-one" type="color" />
-    <input id="gradient-color-two" type="color" />
+    <input id="gradient-color-one" type="color" value="#00F0D4"/>
+    <input id="gradient-color-two" type="color" value="#F3FF1B"/>
   </div>
 
   <div class="maze-container">
