--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     <div class="size-subtitle">Maze grid size (100-800)</div>
     <input type="number" id="size" min="100" max="800" value="250" />
     <div class="color">Color Gradient</div>
-    <input id="gradient-color-one" type="color" value="#00F0D4"/>
-    <input id="gradient-color-two" type="color" value="#F3FF1B"/>
+    <div class="color-subtitle">Color range to fill the maze</div>
+    <div class="color-selectors">
+      <input id="gradient-color-one" type="color" value="#00F0D4"/>
+      <input id="gradient-color-two" type="color" value="#F3FF1B"/>
+    </div>
+
+    <button id="modal-button">About</button>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">x</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div>
   </div>
 
   <div class="maze-container">
